package solid.dependencyinversion.solution;

public interface interfaceDB {
    void getData();

    void saveIt();
}
