package solid.dependencyinversion.solution;

public interface interfaceUI {
    void showInfo();
}
