@startuml

title __SOLUTION's Class Diagram__\n

  namespace solid.dependencyinversion.solution {
    class solid.dependencyinversion.solution.BusinessLogic {
        + BusinessLogic()
        + doSomeLogicThing()
        + setDatabase()
        + setUIInterfaceImplementatie()
    }
  }
  

  namespace solid.dependencyinversion.solution {
    class solid.dependencyinversion.solution.DB {
        + getData()
        + saveIt()
    }
  }
  

  namespace solid.dependencyinversion.solution {
    class solid.dependencyinversion.solution.UI {
        + showInfo()
    }
  }
  

  namespace solid.dependencyinversion.solution {
    interface solid.dependencyinversion.solution.interfaceDB {
        {abstract} + getData()
        {abstract} + saveIt()
    }
  }
  

  namespace solid.dependencyinversion.solution {
    interface solid.dependencyinversion.solution.interfaceUI {
        {abstract} + showInfo()
    }
  }
  

  solid.dependencyinversion.solution.BusinessLogic o-- solid.dependencyinversion.solution.interfaceDB : database
  solid.dependencyinversion.solution.BusinessLogic o-- solid.dependencyinversion.solution.interfaceUI : ui
  solid.dependencyinversion.solution.DB .up.|> solid.dependencyinversion.solution.interfaceDB
  solid.dependencyinversion.solution.UI .up.|> solid.dependencyinversion.solution.interfaceUI


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
